--- a/index.html
+++ b/index.html
@@ -10,9 +10,34 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        #loadingSpinner {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(0,0,0,0.7);
+            color: white;
+            padding: 20px;
+            border-radius: 5px;
+            z-index: 1000;
+        }
+        .error-message {
+            color: red;
+            margin-top: 5px;
+        }
+        .isim{
+            margin-top: 100px;
+        }
+    </style>
 </head>
 
 <body>
+    <div id="loadingSpinner">
+        <i class="fas fa-spinner fa-spin"></i> İşlem yapılıyor...
+    </div>
+
     <div class="container">
         <header>
             <h1><i class="fas fa-clipboard-list"></i> Liste</h1>
@@ -29,10 +54,12 @@
                 <input type="text" id="itemAmount" placeholder="Miktar">
                 <input type="file" id="itemImage" accept="image/*">
                 <button onclick="addItem()"><i class="fas fa-plus"></i> Ekle</button>
+                <div id="imageError" class="error-message"></div>
             </div>
 
             <div class="list-items" id="itemsList">
-                </div>
+                <!-- Öğeler burada render edilecek -->
+            </div>
         </div>
 
         <div class="actions">
@@ -50,11 +77,13 @@
             </div>
         </div>
     </div>
-
+    <div class="footer">
+        <p class="isim">Developed by Bünyamin Ekmekcioğlu</p>
+    </div>
     <script>
-        // Firebase Config
+        // Firebase Config (Kendi bilgilerinizle değiştirin)
         const firebaseConfig = {
-            apiKey: "AIzaSyCGG5Ur3YpVxbtkjooMxE6r7RPuAmZoFRI", // Burayı kendi API key'inizle değiştirin
+            apiKey: "AIzaSyCGG5Ur3YpVxbtkjooMxE6r7RPuAmZoFRI",
             authDomain: "anonim-not.firebaseapp.com",
             projectId: "anonim-not",
             storageBucket: "anonim-not.appspot.com",
@@ -66,46 +95,77 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
 
-        let items = [];
-        const IMGUR_CLIENT_ID = "895f27f2c7a23be"; // Burayı kendi Imgur Client ID'nizle değiştirin!
+        let items = JSON.parse(localStorage.getItem('draftItems')) || [];
+        const IMGUR_CLIENT_ID = "895f27f2c7a23be"; // Imgur Client ID'niz
 
-        // QRCode kontrolü
-        function checkQRCodeLibrary() {
-            if (typeof QRCode === 'undefined') {
-                console.error("QRCode kütüphanesi yüklenemedi!");
-                return false;
+        // Sayfa yüklendiğinde öğeleri render et
+        document.addEventListener('DOMContentLoaded', function() {
+            renderItems();
+            checkImgurStatus(); // Imgur bağlantısını test et
+        });
+
+        // Imgur bağlantısını test et
+        async function checkImgurStatus() {
+            try {
+                const response = await fetch("https://api.imgur.com/3/credits", {
+                    headers: { "Authorization": `Client-ID ${IMGUR_CLIENT_ID}` }
+                });
+                const data = await response.json();
+                console.log("Imgur API Durumu:", data);
+                if (!data.success) {
+                    console.warn("Imgur API Limitleri:", data.data);
+                }
+            } catch (error) {
+                console.error("Imgur Bağlantı Hatası:", error);
             }
-            return true;
         }
 
+        // Resmi Imgur'a yükle
         async function uploadImageToImgur(file) {
-            return new Promise((resolve, reject) => {
-                const formData = new FormData();
-                formData.append("image", file);
+            showLoading();
+            document.getElementById("imageError").textContent = "";
 
-                const xhr = new XMLHttpRequest();
-                xhr.open("POST", "https://api.imgur.com/3/image");
-                xhr.setRequestHeader("Authorization", `Client-ID ${IMGUR_CLIENT_ID}`);
-                xhr.onload = function() {
-                    if (xhr.status === 200) {
-                        const response = JSON.parse(xhr.responseText);
-                        resolve(response.data.link); // Resim URL'sini döndür
-                    } else {
-                        reject(new Error(`Imgur yükleme hatası: ${xhr.status} - ${xhr.statusText}`));
-                    }
-                };
-                xhr.onerror = function() {
-                    reject(new Error("Imgur yükleme hatası"));
-                };
-                xhr.send(formData);
-            });
+            // Dosya boyutu kontrolü (10MB)
+            if (file.size > 10 * 1024 * 1024) {
+                hideLoading();
+                document.getElementById("imageError").textContent = "Resim boyutu 10MB'tan küçük olmalı!";
+                throw new Error("Dosya boyutu aşıldı");
+            }
+
+            const formData = new FormData();
+            formData.append("image", file);
+
+            try {
+                const response = await fetch("https://api.imgur.com/3/image", {
+                    method: "POST",
+                    headers: {
+                        "Authorization": `Client-ID ${IMGUR_CLIENT_ID}`
+                    },
+                    body: formData
+                });
+
+                const data = await response.json();
+                if (!data.success) {
+                    throw new Error(data.data.error || "Imgur yükleme hatası");
+                }
+                return data.data.link;
+            } catch (error) {
+                console.error("Imgur Hatası:", {
+                    error: error.message,
+                    stack: error.stack
+                });
+                document.getElementById("imageError").textContent = "Resim yüklenemedi: " + error.message;
+                throw error;
+            } finally {
+                hideLoading();
+            }
         }
 
-
-        function addItem() {
-            const name = document.getElementById("itemName").value;
-            const amount = document.getElementById("itemAmount").value;
-            const imageFile = document.getElementById("itemImage").files[0]; // Seçilen dosya
+        // Öğe ekle
+        async function addItem() {
+            const name = document.getElementById("itemName").value.trim();
+            const amount = document.getElementById("itemAmount").value.trim();
+            const imageFile = document.getElementById("itemImage").files[0];
 
             if (!name) {
                 alert("Lütfen öğe adı girin!");
@@ -114,23 +174,30 @@
 
             let imageUrl = null;
             if (imageFile) {
-                // Resim yükleme işlemini burada yapmayacağız, createList'e taşıyacağız
-                imageUrl = "Yükleniyor..."; // Geçici bir mesaj
+                try {
+                    imageUrl = await uploadImageToImgur(imageFile);
+                } catch (error) {
+                    return; // Hata mesajı zaten gösterildi
+                }
             }
-
 
             items.push({
                 name: name,
                 amount: amount || "1",
-                imageUrl: imageUrl || null
+                imageUrl: imageUrl
             });
 
+            // Input'ları temizle
             document.getElementById("itemName").value = "";
             document.getElementById("itemAmount").value = "";
-            document.getElementById("itemImage").value = ""; // Dosya input'unu sıfırla
+            document.getElementById("itemImage").value = "";
+
+            // LocalStorage'a kaydet
+            localStorage.setItem('draftItems', JSON.stringify(items));
             renderItems();
         }
 
+        // Öğeleri render et
         function renderItems() {
             const listContainer = document.getElementById("itemsList");
             listContainer.innerHTML = "";
@@ -142,7 +209,7 @@
                 let imageHtml = '';
                 if (item.imageUrl) {
                     imageHtml = `<div class="item-image-container">
-                        <img src="${item.imageUrl}" class="item-image" onerror="this.style.display='none'">
+                        <img src="${item.imageUrl}" class="item-image" onerror="this.onerror=null;this.style.display='none'">
                     </div>`;
                 }
 
@@ -158,11 +225,14 @@
             });
         }
 
+        // Öğe sil
         function removeItem(index) {
             items.splice(index, 1);
+            localStorage.setItem('draftItems', JSON.stringify(items));
             renderItems();
         }
 
+        // Liste oluştur
         async function createList() {
             const title = document.getElementById("listTitle").value.trim();
 
@@ -176,106 +246,88 @@
                 return;
             }
 
-            // Resimleri Imgur'a yükle ve URL'leri al
-            const uploadedItems = await Promise.all(items.map(async item => {
-                if (item.imageUrl === "Yükleniyor...") { // Eğer resim yükleniyorsa
-                    try {
-                        item.imageUrl = await uploadImageToImgur(document.getElementById("itemImage").files[0]);
-                    } catch (error) {
-                        console.error("Resim yükleme hatası:", error);
-                        item.imageUrl = null; // Hata durumunda URL'yi null olarak ayarla
-                    }
-                }
-                return item;
-            }));
-
+            showLoading();
             try {
                 const listId = Math.random().toString(36).substring(2, 11);
                 const editPassword = Math.random().toString(36).substring(2, 8);
 
                 await db.collection("lists").doc(listId).set({
                     title: title,
-                    items: uploadedItems, // Yüklenmiş URL'lerle birlikte kaydet
+                    items: items,
                     password: editPassword,
                     createdAt: firebase.firestore.FieldValue.serverTimestamp()
                 });
 
                 // QR Kod Oluştur
-                const qrcodeDiv = document.getElementById("qrCode");
-                qrcodeDiv.innerHTML = "";
-
-                const listUrl = `${window.location.origin}/view.html?id=${listId}&p=${editPassword}`;
-
-                if (checkQRCodeLibrary()) {
-                    try {
-                        new QRCode(qrcodeDiv, {
-                            text: listUrl,
-                            width: 200,
-                            height: 200,
-                            colorDark: "#2c3e50",
-                            correctLevel: QRCode.CorrectLevel.H
-                        });
-                        console.log("QRCode başarıyla oluşturuldu");
-                    } catch (qrError) {
-                        console.error("QRCode oluşturma hatası:", qrError);
-                        showQRCodeFallback(qrcodeDiv, listUrl);
-                    }
-                } else {
-                    showQRCodeFallback(qrcodeDiv, listUrl);
-                }
-
-                document.getElementById("listLink").innerHTML = `
-                    <p>Liste linki:</p>
-                    <a href="${listUrl}" target="_blank">${urlShortener(listUrl)}</a>
-                `;
-
-                document.getElementById("editPassword").textContent = editPassword;
-                document.getElementById("qrModal").style.display = "block";
+                generateQRCode(listId, editPassword);
+                
+                // Başarılı olduğunda draft'i temizle
+                items = [];
+                localStorage.removeItem('draftItems');
             } catch (error) {
-                console.error("Firestore hatası:", error);
-                alert("Hata oluştu: " + error.message);
+                console.error("Firestore Hatası:", error);
+                alert("Liste oluşturulurken hata oluştu: " + error.message);
+            } finally {
+                hideLoading();
             }
         }
 
-        function showQRCodeFallback(container, url) {
-            container.innerHTML = `
-                <div class="qr-fallback">
-                    <p>QR kod oluşturulamadı</p>
-                    <p>Link: <a href="${url}" target="_blank">${urlShortener(url)}</a></p>
-                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodeURIComponent(url)}"
-                         alt="QR Code" style="margin-top:10px;">
-                </div>
+        // QR Kod oluştur
+        function generateQRCode(listId, editPassword) {
+            const qrcodeDiv = document.getElementById("qrCode");
+            qrcodeDiv.innerHTML = "";
+            const listUrl = `${window.location.origin}/view.html?id=${listId}&p=${editPassword}`;
+
+            try {
+                new QRCode(qrcodeDiv, {
+                    text: listUrl,
+                    width: 200,
+                    height: 200,
+                    colorDark: "#2c3e50",
+                    correctLevel: QRCode.CorrectLevel.H
+                });
+            } catch (qrError) {
+                qrcodeDiv.innerHTML = `
+                    <div class="qr-fallback">
+                        <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=${encodeURIComponent(listUrl)}"
+                             alt="QR Code">
+                    </div>
+                `;
+            }
+
+            document.getElementById("listLink").innerHTML = `
+                <p>Liste linki:</p>
+                <a href="${listUrl}" target="_blank">${urlShortener(listUrl)}</a>
             `;
+
+            document.getElementById("editPassword").textContent = editPassword;
+            document.getElementById("qrModal").style.display = "block";
         }
 
+        // Yardımcı fonksiyonlar
         function urlShortener(url) {
             return url.length > 50 ? url.substring(0, 50) + "..." : url;
         }
 
         function closeModal() {
             document.getElementById("qrModal").style.display = "none";
-            items = [];
             document.getElementById("listTitle").value = "";
-            renderItems();
         }
 
         function copyLink() {
             const link = document.querySelector("#listLink a").href;
             navigator.clipboard.writeText(link)
                 .then(() => alert("Link kopyalandı!"))
-                .catch(err => {
-                    console.error("Kopyalama hatası:", err);
-                    alert("Link kopyalanırken hata oluştu");
-                });
+                .catch(err => alert("Link kopyalanırken hata oluştu"));
         }
 
-        // Sayfa yüklendiğinde QRCode kontrolü yap
-        document.addEventListener('DOMContentLoaded', function() {
-            if (!checkQRCodeLibrary()) {
-                console.warn("QRCode kütüphanesi yüklenmedi, alternatif yöntemler kullanılacak");
-            }
-        });
+        function showLoading() {
+            document.getElementById("loadingSpinner").style.display = "block";
+        }
+
+        function hideLoading() {
+            document.getElementById("loadingSpinner").style.display = "none";
+        }
     </script>
 </body>
-
 </html>
